# pyinsurance-

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  Example.ipynb  MANIFEST.in  README.md  README.rst  main.py  pyproject.toml  requirement.txt  setup.cfg  setup.py  test_tipp.py
.github/: dependabot.yml
.github/actions/build_env/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  github_release.yml  release.yml
docs/release-notes/: v2.0.0.md
pyinsurance/: pymolder.py
pyinsurance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyinsurance/data/: utils.py
pyinsurance/data/IRX/: __init__.py
pyinsurance/data/sp500/: __init__.py
pyinsurance/metrics/: metrics.py
pyinsurance/portfolio/: __init__.py  _tipp.pyi  _tipp.pyx  base.py  tipp.py  tipp_.c  tipp_.pyx  tipp__.py
pyinsurance/stats/: capm.py  jensen.py
src/TIPP_constructor/: Example.ipynb  TIPP_model.py
src/TIPP_constructor/.ipynb_checkpoints/: Example-checkpoint.ipynb
src/TIPP_constructor/Metric_Generator/: Probabilistic_Sharpe_Ratio.py
src/TIPP_constructor/data/IRX/: __init__.py
src/TIPP_constructor/data/sp500/: __init__.py
src/TIPP_constructor/ts/: Drawdown.py  tipp_constructor.py
src/pyinsurance/: Example.ipynb  TIPP_model.py
src/pyinsurance/Metric_Generator/: Probabilistic_Sharpe_Ratio.py
src/pyinsurance/data/IRX/: __init__.py
src/pyinsurance/data/sp500/: __init__.py
src/pyinsurance/ts/: Drawdown.py
test/: test_tipp.py
test/py/: test_tipp_py.py
