[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0", "numpy>=2.2.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinsurance"
version = "1.0.0"
description = "Insurance portfolio management tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.0.12",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "pandas>=2.2.2",
    "pandas-stubs>=2.2.2",
    "scipy-stubs>=1.15.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0"
]

[tool.setuptools]
package-dir = {"pyinsurance" = "pyinsurance"}

[tool.setuptools.packages.find]
where = ["."]
include = ["pyinsurance*", "pyinsurance/*.pyi"]
exclude = ["tests*", "docs*", "examples*"]

[tool.cython]
language_level = 3
compiler_directives.boundscheck = false
compiler_directives.wraparound = false
